fixes spacing error on text

--- a/src/react/components/pages/editorPage/editorPage.scss
+++ b/src/react/components/pages/editorPage/editorPage.scss
@@ -120,7 +120,7 @@
                 margin: 0 0 0 8px;
             }
 
-            .asset-size {
+            .float-right {
                 margin: 0 7px 0 0;   
             }
         }
